Thu Nov 23 18:38:54 2000  Carlos O'Ryan  <coryan@cs.wustl.edu>

        * Makefile:
          Add ACE_wrappers/html to the list of files tagged, even though
          they are not included in the tar or zip files.

Thu Nov 23 18:27:52 2000  Carlos O'Ryan  <coryan@cs.wustl.edu>

        * Makefile:
          The ACE-INSTALL file is generated in the staging directory,
          there is no need to generate it locally too.

Thu Nov 23 18:13:32 2000  Carlos O'Ryan  <coryan@cs.wustl.edu>

        * bin/make_release:
          Don't use 'grep -q' because Solaris' grep does not support it.

Thu Nov 23 14:43:40 2000  Carlos O'Ryan  <coryan@uci.edu>

        * Makefile:
          Do not include the html directory in the release. The doxygen
          files are too big for this.

        * ace/config-doxygen.h:
          Improve doxygen documentation.

        * bin/generate_doxygen.pl:
          Add options to change the path to find dot and perl on the fly.

        * bin/make_release:
          Generate the HTML documentation in a separate .tar.gz (or .zip)
          file.

Wed Nov 22 17:35:55 2000  Angelo Corsaro  <corsaro@cs.wustl.edu>

        * bin/auto_run_tests.lst:

          Added entry for Collocation test. Moved entry for Client
          Exposed Policy test from the old list file to this one.

Wed Nov 22 09:29:32 2000  Darrell Brunsch <brunsch@uci.edu>

        * etc/ace.doxygen:

          Added the docs directory and *.txt files to be looked
          at by doxygen.

        * docs/CE-status.txt:
        * docs/wchar.txt:

          Fixed up these files, so they show up correctly in the
          doxygen html pages.

Tue Nov 21 19:55:49 200 0  Pradeep Gore  <pradeep@cs.wustl.edu>

        * ace/IPC_SAP.cpp:
          Casting param1 to SOCKET did the trick. Thanks Doug!

Tue Nov 21 19:21:10 2000  Pradeep Gore  <pradeep@cs.wustl.edu>

        * ace/IPC_SAP.cpp:

          Reverted previous change applied to ACE_IPC_SAP::disable because